fix submenu first item visiblity

--- a/src/styles/_header.less
+++ b/src/styles/_header.less
@@ -276,6 +276,7 @@
 .menu-sub-items {
   gap: 0.3125rem;
   padding-left: 0;
+  padding-top: 1.25rem;
 }
 
 .menu-sub-item {
